--- a/.github/workflows/api.emr-diagnostic.deploy.yml
+++ b/.github/workflows/api.emr-diagnostic.deploy.yml
@@ -22,7 +22,7 @@ defaults:
 jobs:
   create-latest-docker-image:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
-    name: Create & Push Image
+    name: Create API-Builder Image
     runs-on: ubuntu-latest
     steps:
       - uses: hmarr/debug-action@v2
@@ -46,7 +46,7 @@ jobs:
           tags: docker.pkg.github.com/${{ github.repository }}/${{ env.apiId }}:${{ env.IMAGE_TAG }}
 
   deploy-api-builder:
-    name: Deploy API-Builder on K8S
+    name: Deploy API-Builder application
     needs: create-latest-docker-image
     runs-on: ubuntu-latest
     steps:
@@ -78,7 +78,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy-api-builder
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
@@ -104,6 +105,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy-api
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Install newman
         run: sudo npm -g install newman
       - name: Run API tests
