--- a/.github/workflows/api.emr-diagnostic.deploy.yml
+++ b/.github/workflows/api.emr-diagnostic.deploy.yml
@@ -112,6 +112,8 @@ jobs:
       - name: Run API tests
         run: |
           sleep 1
+          printenv
+          pwd
           newman run ./tests/DiagnosticAPI.postman_collection.json -e $HOME/lib/Demo-Environment.postman_environment.json --reporter-json-export output.json --insecure
 
 #  Publish-API:
