--- a/.github/workflows/api.bulk-payments.deploy.yml
+++ b/.github/workflows/api.bulk-payments.deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - use-case-test*
+      - use-case-tests-1
     paths:
       - api.bulk-payments/**
 
